--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -66,6 +66,9 @@
       <div id="pull-push">
         <button class="button" type="button" onclick="pull('clipboard')">pull</button>
         <button class="button" type="button" onclick="push('clipboard')">push</button>
+        <button class="button" type="button"
+          onclick="createCodeeFile('codee','/home/codination/ver1/app/static/files/user2/OSSLab_0420_test')">create
+          codee</button>
       </div>
     </div>
     <div class="box" id='export'>
