Fix infinite loop problem in bindTags function

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -110,5 +110,6 @@
 <script src="{{ url_for('static', filename = 'script/writecodee.js') }}"></script>
 <script src="{{ url_for('static', filename = 'script/projectbar.js') }}"></script>
 <script src="{{ url_for('static', filename = 'script/codeedit.js') }}"></script>
+<script src="{{ url_for('static', filename = 'script/getIndices.js') }}"></script>
 
 </html>
