fix split contextMenu code & write commit id to codee file

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -490,8 +490,8 @@ textarea {
 
 .comment {
   position: absolute;
-  top: 0;
-  left: 0;
+  /* top: 0;
+  left: 0; */
   border: 1px grey solid;
   border-radius: 3px;
   padding: 5px;
