--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -70,7 +70,7 @@
         </ul>
       </div>
       <div id="pull-push">
-        <button class="button" type="button" onclick="pull('clipboard')">pull</button>
+        <button class="button" type="button" onclick="pull('{{ username }}')">pull</button>
         <button class="button" type="button" onclick="push('clipboard')">push</button>
         <button class="button modalButton" data-popup="popupOne">create codee</button>
         <!-- <button class="button" type="button" class="modalButton" data-popup="popupOne"
