--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -71,7 +71,7 @@
       </div>
       <div id="pull-push">
         <button class="button" type="button" onclick="pull('{{ username }}')">pull</button>
-        <button class="button" type="button" onclick="push('clipboard')">push</button>
+        <button class="button" type="button" onclick="push('{{ username }}')">push</button>
         <button class="button modalButton" data-popup="popupOne">create codee</button>
         <!-- <button class="button" type="button" class="modalButton" data-popup="popupOne"
             onclick="createCodeeFile('codee','/home/codination/ver1/app/static/files/user2/OSSLab_0420_test')">
